--- a/package.json
+++ b/package.json
@@ -1,1 +1,7 @@
-{}
+{
+  "dependencies": {
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "react-toastify": "^11.0.5",
+    "zustand": "^5.0.8"
+  }
+}
