--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.4",
     "zod": "^4.0.10",
     "zustand": "^5.0.8"
   },
