--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tanstack/react-query-devtools": "^5.90.2",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.4",
     "zustand": "^5.0.8"
   }
 }
